feat: chore gitignore, env file

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# Environment variables file
+.env
+
 # Go workspace file
 go.work
 
